add translates for contacts

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,6 +29,17 @@
       "id": "ID",
       "added": "Added by",
       "entires": "Showing entries:"
+    },
+    "create": {
+      "title": "Create Contact",
+      "name": "Name",
+      "firstNamePlaceholder": "First Name",
+      "lastNamePlaceholder": "Last Name",
+      "fullNamePlaceholder": "Heb Full Name",
+      "phone": "Phone",
+      "email": "Email",
+      "cancel": "Close",
+      "submit": "Create"
     }
   },
   "dateTime": {
